Inconsistency - Remove Selected From Active Group #37769

Closed
opened 2013-12-10 16:11:10 +01:00 by Terry Wallwork · 8 comments

Possible inconstancy between:

3D View Editor Header > Object > Group > Add Selected To Active Group
(SHIFT+CTRL+G)
&
3D View Editor Header > Object > Group > Remove Selected From Active Group
(SHIFT+ALT+G)

Reason: They are named as if they are the inverse of each other. But they don't
work in a similar way.

Attached Blend file: group.blend1

Example

Cube A is member of 1 Group, while Cube B is a member of groups 2 and 3.

If I select Cube A and then shift select Cube B and then activate
Add Selected To Active Group. Blender will then scan Cube B (active object)
and present me with a list of groups it is a member of. Allowing me to
select a group I want to add to the other selected objects.

However if I select Cube A then shift select Cube B and use the
Remove Selected From Active Group operator, things work differently.
What it does is scan the active object for all the groups it belongs
to and then removes all those groups from all the other selected objects and
itself. No menu is displayed offering to remove a specific group that the active
object has from the other selected objects.

It would be useful if this command worked in a consistent way to the
Add Selected To Active Group but for removal of groups.

If that not possible maybe it would be a good idea to rename
Remove Selected From Active Group to Remove Selected From Active Groups
making it plural gives a clue that all the groups of the active object
will be removed from the selected objects.

Possible inconstancy between: 3D View Editor Header > Object > Group > Add Selected To Active Group (SHIFT+CTRL+G) & 3D View Editor Header > Object > Group > Remove Selected From Active Group (SHIFT+ALT+G) Reason: They are named as if they are the inverse of each other. But they don't work in a similar way. Attached Blend file: [group.blend1](https://archive.blender.org/developer/F38240/group.blend1) **Example** Cube A is member of 1 Group, while Cube B is a member of groups 2 and 3. If I select Cube A and then shift select Cube B and then activate Add Selected To Active Group. Blender will then scan Cube B (active object) and present me with a list of groups it is a member of. Allowing me to select a group I want to add to the other selected objects. However if I select Cube A then shift select Cube B and use the Remove Selected From Active Group operator, things work differently. What it does is scan the active object for all the groups it belongs to and then removes all those groups from all the other selected objects and itself. No menu is displayed offering to remove a specific group that the active object has from the other selected objects. It would be useful if this command worked in a consistent way to the Add Selected To Active Group but for removal of groups. If that not possible maybe it would be a good idea to rename Remove Selected From Active Group to Remove Selected From Active Groups making it plural gives a clue that all the groups of the active object will be removed from the selected objects.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @TerryWallwork-1

Added subscriber: @TerryWallwork-1

Added subscriber: @dro76wal

Added subscriber: @dro76wal

This issue was referenced by blender/blender-addons-contrib@653d645587

This issue was referenced by blender/blender-addons-contrib@653d645587cda2c7da878880cb027bd62c14257f

This issue was referenced by 653d645587

This issue was referenced by 653d645587cda2c7da878880cb027bd62c14257f
Brecht Van Lommel self-assigned this 2013-12-12 06:13:51 +01:00

Fixed now, thanks for the report.

Fixed now, thanks for the report.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 653d645587.

Closed by commit 653d645587.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37769
No description provided.