Fix T37769: inconsistent behavior of Remove Selected From Active Group.

Add Selected to Active Group presented a menu with groups to choose from, while
this seemingly inverse operation did not and used all groups of the active
object.

Now both operators present a menu, with as first option "All Groups".